--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -20,7 +20,7 @@
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <form id=orderForm method="POST"
-          th:action="@{/users/clients/orders}" >
+          th:action="@{/orders}" >
 
       <div  class="container">
         <label for="uname"><strong>Address to:</strong></label>
@@ -48,7 +48,7 @@
 
 </div>
 
-  <scrip th:src="@{/Js/Orders.js}"></scrip>
+  <scrip src="./resources/static/Js/Orders.js"></scrip>
 
 </div>
 <div>
