промяна по order processing, трябва да извета html-a в controller , a restcontrollerßa да се отнася за класа,да се консумира с js в <script> на htmlßa

--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -14,6 +14,15 @@
   <h2 class="text-center text-white">A page for clients</h2>
 </div>
 
+<div class="jumbotron-center">
+
+  <h1 style="color:black;">
+
+    <a  class="btn btn-outline-primary" th:text="|Distance: {} Cost:{} after {15min}|"></a>
+
+
+
+  </h1>
 
 
 
