--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,10 +15,10 @@
       <ul class="navbar-nav mr-auto col-12 justify-content-between">
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <!-- Logged users, no mather of the roles -->
-          <a class="nav-link" th:href="@{/pages/aboutus}">About Us</a>
+          <a class="nav-link" th:href="@{/aboutus}">About Us</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
-          <a class="nav-link" th:href="@{/pages/contacts}"><i class="fa fa-fw fa-envelope"></i>>Contacts</a>
+          <a class="nav-link" th:href="@{/contacts}"><i class="fa fa-fw fa-envelope"></i>>Contacts</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <a class="nav-link" th:href="@{/}">Home</a>
@@ -26,14 +26,22 @@
 
 
         <li class="nav-item" sec:authorize="hasRole('Client')">
-          <a class="nav-link" th:href="@{/users/clients/orders}">Create order</a>
+          <a class="nav-link" th:href="@{/orders}">Create order</a>
         </li>
         <li class="nav-item" sec:authorize="hasRole('Client')">
-          <a class="nav-link" th:href="@{/users/clients/subscriptions}">Create Subscription</a>
+          <a class="nav-link" th:href="@{/subscriptions}">Create Subscription</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-          <a class="nav-link" th:href="@{/pages/admins}">Admins</a>
+        <li class="nav-item" sec:authorize="hasRole('Client')">
+          <a class="nav-link" th:href="@{/clients}">Client Page</a>
         </li>
+        <li class="nav-item" sec:authorize="hasRole('Admin')">
+          <a class="nav-link" th:href="@{/admins}">Admin Page</a>
+        </li>
+
+        <li class="nav-item" sec:authorize="hasRole('Driver')">
+          <a class="nav-link" th:href="@{/drivers}">Driver Page</a>
+        </li>
+
 
         <!-- Logout start -->
         <li class="nav-item" sec:authorize="isAuthenticated()">
