Корекция по navbar и страниците нужни за обработка на поръчките, част от функциалноста по обработка на поръките (нужна е корекция).

--- a/src/main/resources/templates/driverDash.html
+++ b/src/main/resources/templates/driverDash.html
@@ -11,27 +11,10 @@
 </div>
 <div>
 
-<div class="container">
-  <h2 class="text-center text-white">A page for drivers</h2>
-</div>
-<div class="jumbotron">
+  <div class="container">
+    <h2 class="text-center text-white">A page for driversDash</h2>
+  </div>
 
-  <h1 style="color:black;">
-
-    <table>
-      <thead>
-      <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Isbn</th>
-        <th>Action</th>
-      </tr>
-      </thead>
-      <tbody id="books-container"></tbody>
-    </table>
-
-
-  </h1>
 
 </div>
 
@@ -56,8 +39,12 @@
       <a href="/details" id="details">Done</a>
     </div>
   </div>
-  <script th:src="@{/Js/Driver.js}"></script>
+
 </div>
+
+
+
+<script th:src="@{./Js/Driver.js}"></script>
 <div>
   <footer></footer>
 </div>
