--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,13 +9,14 @@
 <div th:fragment="navbar">
 
 
+
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto col-12 justify-content-between">
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <!-- Logged users, no mather of the roles -->
-          <a class="nav-link" th:href="@{/aboutus}">About Us</a>
+          <a class="nav-link" th:href="@{/aboutus}">About Us<+/a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <a class="nav-link" th:href="@{/contacts}"><i class="fa fa-fw fa-envelope"></i>>Contacts</a>
@@ -25,21 +26,25 @@
         </li>
 
 
-        <li class="nav-item" sec:authorize="hasRole('Client')">
-          <a class="nav-link" th:href="@{/orders}">Create order</a>
+
+        <li class="nav-item" sec:authorize="hasRole('Client')" >
+
+          <a class="nav-link" th:href="@{/clients/{id}/makeOrder(id=${#authentication.principal.id})}">Create order</a>
         </li>
         <li class="nav-item" sec:authorize="hasRole('Client')">
-          <a class="nav-link" th:href="@{/subscriptions}">Create Subscription</a>
+
+          <a class="nav-link" th:href="@{/clients/{id}/makeSubscription(id=${#authentication.principal.id})}">Create Subscription</a>
         </li>
         <li class="nav-item" sec:authorize="hasRole('Client')">
-          <a class="nav-link" th:href="@{/clients}">Client Page</a>
+
+          <a class="nav-link" th:href="@{/clients/{id}(id=${#authentication.principal.id})}">Client Dashboard</a>
         </li>
         <li class="nav-item" sec:authorize="hasRole('Admin')">
           <a class="nav-link" th:href="@{/admins}">Admin Page</a>
         </li>
 
         <li class="nav-item" sec:authorize="hasRole('Driver')">
-          <a class="nav-link" th:href="@{/drivers}">Driver Page</a>
+          <a class="nav-link" th:href="@{/drivers/{id}(id=${#authentication.principal.id})}">Driver Dashboard</a>
         </li>
 
 
