--- a/src/main/resources/templates/clientDash.html
+++ b/src/main/resources/templates/clientDash.html
@@ -20,7 +20,7 @@
 
 
 <div class="card">
-  <img src="..." class="card-img-top" alt="...">
+<!--  <img src="..." class="card-img-top" alt="...">-->
 
   <div class="card-body">
     <h5 class="card-title">Order Confirmationm</h5>
