--- a/src/main/resources/templates/driverDash.html
+++ b/src/main/resources/templates/driverDash.html
@@ -9,6 +9,8 @@
 <div th:replace="~{fragments/navbar :: navbar}">
   Navbar
 </div>
+
+<input type="hidden" id="driverId" name="driverId" th:object="${driver}" th:value="${driver.id}">
 <div>
 
   <div class="container">
@@ -29,7 +31,7 @@
 </div>
 
 <div id="task" class="card-box">
-  <img src=${album.imageUrl}>
+<!--  <img src=${album.imageUrl}>-->
   <div>
     <div class="text-center">
       <p class="from">Address from</p>
@@ -44,7 +46,7 @@
 
 
 
-<script th:src="@{./Js/Driver.js}"></script>
+<script th:src="@{/Js/Driver.js}"></script>
 <div>
   <footer></footer>
 </div>
