--- a/src/main/resources/templates/driverDash.html
+++ b/src/main/resources/templates/driverDash.html
@@ -32,7 +32,7 @@
 
         </div>
 
-        <div id="task" class="card-box">
+        <div id="task" class="card-box" th:object="${driver}">
         <!--  <img src=${album.imageUrl}>-->
           <div>
             <div class="text-center">
