--- a/src/main/resources/templates/adminDash.html
+++ b/src/main/resources/templates/adminDash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head::head"></head>
+<head th:replace="~{fragments/head::head}"></head>
 
 
 
@@ -21,37 +21,58 @@
     <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
   </div>
 
-<!--  <div id="subscription_task"   id="subscriptionDetails-${s.id}" class="mt-3 rounded badge-info p-3">-->
-<!--    <span class="p-3" >Type : ${s.subscription.name}</span>-->
-<!--    <span class="p-3" >From : ${s.addressFrom}</span>-->
-<!--    <span class="p-3" >To : ${s.addressTo}</span>-->
+  <div th:each="s:${notAssigned}" th:object="${s}" id="subscription_task"    class="mt-3 rounded badge-info p-3">
+    <div id="Subtask">
+<!--    <span class="p-3" th:text="|Name:*{subscription.name.name()}|" >*{subscription.name}</span>-->
+      <span class="p-3" th:text="|Id: *{id}|" >Id: *{id}</span>
+    <span class="p-3" th:text="|From : *{addressFrom}|">From : *{addressFrom}</span>
+    <span class="p-3" th:text="|To : *{addressTo}|">To : *{addressTo}</span>
+    </div>
+    <h1></h1>
+  </div>
 
-<!--    <h1></h1>-->
+    <form id="assignForm" method="put"
 
-<!--    <form id="assignForm" method="post"-->
+          class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
+      <div class="form-group row">
+        <div class="col-sm-10">
+        <label for="Assign" class="col-sm-2 col-form-label">Assign Subscription</label>
+        </div>
+      </div>
 
-<!--          class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">-->
-<!--      <div class="form-group row">-->
-<!--        <label for="subscription" class="col-sm-2 col-form-label">Assign Subscription</label>-->
-<!--        <div class="col-sm-10">-->
+          <div class="form-group row">
+            <label for="subscriptionId" class="col-sm-2 col-form-label">Subscription</label>
+            <div class="col-sm-10">
+              <select   id="subscriptionId" name="subscriptionId" class="custom-select"
+                        aria-describedby="subscriptionId">
+                <option value="" selected>Subscription</option>
+                <option id="subId" th:each="s : ${notAssigned}" th:object="${s}" th:value="*{id}" th:text="*{id}">Subscription Type</option>
+              </select>
 
-<!--          <select  errorclass="is-invalid" id="subscription" name="subscription" class="custom-select"-->
-<!--                   aria-describedby="assign">-->
-<!--            <option value="" selected>Driver</option>-->
-<!--            <option th:each="driver : ${drivers}" th:value="${driver.email}" th:text="${driver.email}">driver</option>-->
-<!--          </select>-->
-<!--          <small id="subscriptionTypeAdd" class="invalid-feedback bg-danger text-light rounded">-->
-<!--            You must select the subscription.-->
-<!--          </small>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="form-group">-->
-<!--        <input type="submit"-->
-<!--               class="btn"-->
-<!--               id="assign - ${driver.id}"-->
-<!--               value="Assign"/>-->
-<!--      </div>-->
-<!--    </form>-->
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="driverId" class="col-sm-2 col-form-label">Driver</label>
+            <div class="col-sm-10">
+              <select id="driverId" name="driverId" class="custom-select"
+                        aria-describedby="driverId">
+                <option value="" selected>Driver</option>
+                <option id="driversId" th:each="d : ${drivers}" th:object="${d}" th:value="*{id}" th:text="*{email}">S</option>
+<!--                <a id="driverId" th:value="*{id}"></a>-->
+              </select>
+
+            </div>
+          </div>
+
+
+      <div class="form-group">
+        <input type="submit"
+               class="btn"
+               id="assign"
+               value="Assign"/>
+      </div>
+      <script th:src="@{/Js/AssignDriver.js}"></script>
+    </form>
   </div>
 
 
@@ -136,7 +157,7 @@
 
 
 
-
+  <script th:src="@{/Js/Admin.js}"></script>
 
 <div>
   <footer></footer>
