--- a/src/main/resources/templates/makeOrder.html
+++ b/src/main/resources/templates/makeOrder.html
@@ -31,6 +31,9 @@
                                type="text"
                                class="form-control"
                                placeholder="addressFrom"/>
+                        <small id="addressFromError" class="invalid-feedback">
+                            Address should be at least 2 characters.
+                        </small>
                     </div>
                     <div  class="form-group">
                         <label for="addressTo" class="text-white font-weight-bold">Address To</label>
@@ -39,6 +42,9 @@
                                type="text"
                                class="form-control"
                                placeholder="addressTo"/>
+                        <small id="addressToError" class="invalid-feedback">
+                            Address should be at least 2 characters.
+                        </small>
                     </div>
                     <div  class="form-group">
                         <label for="numberOfPassengers" class="text-white font-weight-bold">Number Of Passengers</label>
@@ -47,6 +53,9 @@
                                type="number"
                                class="form-control"
                                placeholder="numberOfPassengers"/>
+                        <small id="numberOfPassengersError" class="invalid-feedback">
+                            Number of passengers should be positive number.
+                        </small>
                     </div>
                     <div class="form-group">
                         <input type="hidden" id="clientId" name="clientId" th:object="${client}" th:value="${client.id}">
