--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -7,11 +7,12 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+
 </div>
 
 <div class="container">
-  <h2 class="text-center text-white"> - AboutUs - A page for all users</h2>
+  <h1 class="display-15 text-center"><strong class="bg-blur rounded">It is a project in devolpment about trasport services managment.</strong></h1>
+  <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
 </div>
 
 <div>
