--- a/src/main/resources/templates/clientDash.html
+++ b/src/main/resources/templates/clientDash.html
@@ -7,27 +7,20 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+
 </div>
 <div>
 
   <div class="container">
-    <h2 class="text-center text-white">A page for clientDash</h2>
+    <h1 class="display-5 text-center"><strong class="bg-blur rounded">Clients Dashboard</strong></h1>
+    <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
   </div>
 
 
 </div>
 
 
-<div class="card">
-<!--  <img src="..." class="card-img-top" alt="...">-->
 
-  <div class="card-body">
-    <h5 class="card-title">Order Confirmationm</h5>
-    <p class="card-text">Your order is confirmt</p> <---да сложа иф ----->
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
 
 
 <div>
