--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -7,11 +7,17 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+
 </div>
 
-<div class="container">
-  <h2 class="text-center text-white"> - Contacts - A page for all users</h2>
+<div class="container text-primary text-center">
+  <h1 class="display-5"><strong class="bg-blur rounded">Contacts</strong></h1>
+  <h1 class="display-20"><strong class="bg-blur rounded">tel:+359 xxxxxxxx</strong></h1>
+  <h1 class="display-20"><strong class="bg-blur rounded">e-mail: xxxx@yyy.com</strong></h1>
+
+
+
+  <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
 </div>
 
 <div>
