--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,12 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+
 </div>
 
 <div class="container">
-  <h2 class="text-center text-white">Welcome to home page</h2>
+  <h1 class="display-10 text-center"><strong class="bg-blur rounded">Driver Service company has for a gol to deliver personal transportation service in the everyday life.</strong></h1>
+  <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
 </div>
 
 <div>
