--- a/src/main/resources/templates/adminDash.html
+++ b/src/main/resources/templates/adminDash.html
@@ -82,11 +82,11 @@
 
     <div  class="col-sm-6 mb-3 mb-sm-0">
       <div class="card" style="width: auto">
-        <img src="..." class="card-img-top" alt="...">
+
 
         <div class="card-body">
           <h5 class="card-title">Create new Subscription Option</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"> Creation of new subscription options.</p>
           <a th:href="@{/admins/{id}/createSubscription(id=${#authentication.principal.id})}" class="btn btn-primary">Create</a>
 
         </div>
@@ -99,12 +99,12 @@
       <!-- #########################################################  Create New Car  ########################################################### -->
 
       <div class="card" style="width: auto">
-        <img src="..." class="card-img-top" alt="...">
+
 
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Create new driver</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a th:href="@{/admins/{id}/createDriver(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
 
         </div>
       </div>
@@ -117,13 +117,13 @@
   <div class="row">
     <div  class="col-sm-6 mb-3 mb-sm-0">
       <div class="card" style="width: auto">
-        <img src="..." class="card-img-top" alt="...">
+
 
         <div class="card-body">
 
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Create new Car</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a th:href="@{/admins/{id}/createCar(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
 
         </div>
       </div>
@@ -134,13 +134,13 @@
     <div  class="col-sm-6 mb-3 mb-sm-0">
 
       <div class="card" style="width: auto">
-        <img src="..." class="card-img-top" alt="...">
+
 
         <div class="card-body">
 
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Create Garage</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="@{/admins//{id}/createGarage(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
