--- a/src/main/resources/templates/createSubscription.html
+++ b/src/main/resources/templates/createSubscription.html
@@ -7,74 +7,76 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+
+</div>
+<div class="container">
+    <h1 class="display-5 text-center"><strong class="bg-blur rounded">Create SubscriptionType</strong></h1>
+    <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
 </div>
 
-<div class="container">
-  <h2 class="text-center text-white"> =Create new Subscription=</h2>
-</div>
+
 
 <!-- <input type="hidden" id="adminId" name="adminId" th:object="${admin}" th:value="*{admin.id}"> -->
 
-<div  class="container">
-  <form id=addForm method="post"
-      th:action="@{/api/subscriptions}"
-      class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
+<div  class="container-fluid">
+    <form id=addForm method="post"
+          th:action="@{/api/subscriptions}"
+          class="main-form mx-auto  justify-content-center">
 
-    <div  class="form-group">
-        <label for="description" class="text-white font-weight-bold">Description</label>
-        <input id="description"
-               name="description"
-               type="text"
-               class="form-control"
-               placeholder="description"/>
-        <small id="descriptionError" class="invalid-feedback">
-            Description should be at least 5 characters.
-        </small>
-    </div>
-    <div  class="form-group">
-        <label for="priceRate" class="text-white font-weight-bold">Price Rate</label>
-        <input id="priceRate"
-               name="priceRate"
-               type="text"
-               class="form-control"
-               placeholder="priceRate"/>
-        <small id="priceRateError" class="invalid-feedback">
-            Price rate should be positive number.
-        </small>
-    </div>
-   
-    <div class="form-group row">
-      <label for="subscriptiontype" class="col-sm-2 col-form-label">Subscription Type</label>
-      <div class="col-sm-10">
-        <!-- th:field="*{category}" -->
-          <select  id="subscriptiontype" name="name" class="custom-select"
-                  aria-describedby="subscriptionTypeAdd">
-              <option value="" selected>Subscription</option>
-              <option th:each="s : ${T(com.SoftUni.DriverServiceProject.Models.Enums.SubscriptionEnumName).values()}" th:value="${s}" th:text="${s}">Sysbscription Type</option>
-             </select>
-          <small id="subscriptiontypeError" class="invalid-feedback">
-              Subscription type could not be blank.
-          </small>
-      </div>
-    </div>
+        <div  class="form-group">
+            <label for="description" class="text-white font-weight-bold">Description</label>
+            <input id="description"
+                   name="description"
+                   type="text"
+                   class="form-control"
+                   placeholder="description"/>
+            <small id="descriptionError" class="invalid-feedback">
+                Description should be at least 5 characters.
+            </small>
+        </div>
+        <div  class="form-group">
+            <label for="priceRate" class="text-white font-weight-bold">Price Rate</label>
+            <input id="priceRate"
+                   name="priceRate"
+                   type="text"
+                   class="form-control"
+                   placeholder="priceRate"/>
+            <small id="priceRateError" class="invalid-feedback">
+                Price rate should be positive number.
+            </small>
+        </div>
 
-    <div class="form-group">
-        <input type="submit"
-               class="btn"
-               id="createSubscriptionType"
-               value="Create Subscription Type"/>
-    </div>
+        <div class="form-group row">
+            <label for="subscriptiontype" class="col-sm-2 col-form-label">Subscription Type</label>
+            <div class="col-sm-10">
+                <!-- th:field="*{category}" -->
+                <select  id="subscriptiontype" name="name" class="custom-select"
+                         aria-describedby="subscriptionTypeAdd">
+                    <option value="" selected>Subscription</option>
+                    <option th:each="s : ${T(com.SoftUni.DriverServiceProject.Models.Enums.SubscriptionEnumName).values()}" th:value="${s}" th:text="${s}">Sysbscription Type</option>
+                </select>
+                <small id="subscriptiontypeError" class="invalid-feedback">
+                    Subscription type could not be blank.
+                </small>
+            </div>
+        </div>
 
-</form>
-  
-          </div>
+        <div class="form-group">
+            <input type="submit"
+                   class="btn"
+                   id="createSubscriptionType"
+                   value="Create Subscription Type"/>
+        </div>
+
+    </form>
+
+</div>
 
 
-          <script th:src="@{/Js/AddNewItem.js}"></script>
+<script th:src="@{/Js/AddNewItem.js}"></script>
 
 <div>
-  <footer></footer>
+    <footer></footer>
 </div>
 </body>
 </html>
