--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,10 +16,10 @@
       <ul class="navbar-nav mr-auto col-12 justify-content-between">
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <!-- Logged users, no mather of the roles -->
-          <a class="nav-link" th:href="@{/aboutus}">About Us<+/a>
+          <a class="nav-link" th:href="@{/aboutus}">About Us</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
-          <a class="nav-link" th:href="@{/contacts}"><i class="fa fa-fw fa-envelope"></i>>Contacts</a>
+          <a class="nav-link" th:href="@{/contacts}"><i class="fa fa-fw fa-envelope"></i>Contacts</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <a class="nav-link" th:href="@{/}">Home</a>
@@ -68,7 +68,7 @@
           <a class="nav-link" th:href="@{/users/register}">Register</a>
         </li>
         <li class="nav-item" sec:authorize="!isAuthenticated()">
-          <a class="nav-link" th:href="@{/users/login}"><i class="fa fa-fw fa-user"></i>>Login</a>
+          <a class="nav-link" th:href="@{/users/login}"><i class="fa fa-fw fa-user"></i>Login</a>
         </li>
 
       </ul>
