--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/head::head}"></head>
@@ -14,11 +14,12 @@
 <div class="container">
   <h2 class="text-center text-white">Register User</h2>
   <form
-      class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
+      class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center"
+      th:method="POST" th:action="@{/users/register}" th:object="${userRegistrationDTO}">
     <div class="row">
       <div class="form-group col-md-6 mb-3">
         <label for="firstName" class="text-white font-weight-bold">First Name</label>
-        <input
+        <input th:field="*{firstName}"
             id="firstName"
             name="firstName"
             type="text"
@@ -26,8 +27,9 @@
             placeholder="First name"/>
       </div>
       <div class="form-group col-md-6 mb-3">
-        <label for="lastName" class="text-white font-weight-bold">Last Name</label>
-        <input id="lastName"
+        <label  for="lastName" class="text-white font-weight-bold">Last Name</label>
+        <input th:field="*{lastName}"
+                id="lastName"
                name="lastName"
                type="text" min="2" max="20" class="form-control"
                placeholder="Last name"/>
@@ -37,14 +39,15 @@
     <div class="row">
       <div class="form-group col-md-6 mb-3">
         <label for="email" class="text-white font-weight-bold">Email</label>
-        <input id="email"
+        <input th:field="*{email}"
+                id="email"
                name="email"
                type="text" min="2" max="20" class="form-control"
-               placeholder="First name"/>
+               placeholder="Email"/>
       </div>
       <div class="form-group col-md-6 mb-3">
         <label for="password" class="text-white font-weight-bold">Password</label>
-        <input id="password"
+        <input th:field="*{password}"id="password"
                name="password"
                type="password" min="2" max="20" class="form-control"
                placeholder="Password"/>
@@ -52,7 +55,8 @@
     </div>
     <div class="form-group col-md-6 mb-3">
       <label for="confirmPassword" class="text-white font-weight-bold">Confirm Password</label>
-      <input id="confirmPassword"
+      <input th:field="*{confirmPassword}"
+              id="confirmPassword"
              name="confirmPassword"
              type="password" min="2" max="20" class="form-control"
              placeholder="Confirm your password"/>
@@ -63,9 +67,13 @@
 
     <div class="row">
       <div class="col col-md-4">
-        <div class="button-holder d-flex">
-          <input type="submit" class="btn btn-info btn-lg" value="Create account"/>
+<!--        <div class="button-holder d-flex">-->
+<!--          <input type="submit" class="btn btn-info btn-lg" value="Create account"/>-->
+<!--        </div>-->
+        <div class="button-holder d-flex justify-content-center">
+          <button type="submit" class="btn btn-warning  mb-3" value="Create account">Create account</button>
         </div>
+
       </div>
     </div>
   </form>
